Rework to common service. Added archive ability to projects

--- a/src/ProjectManager/Components/MonthlyInvoicing.razor
+++ b/src/ProjectManager/Components/MonthlyInvoicing.razor
@@ -2,9 +2,9 @@
 @using Blazorise.Components
 @using Blazorise.Charts
 @using ProjectManager.Data
-@using ProjectManager.Data.ProjectIntegration
 @using CommonDataModels
 @using System.Globalization
+@using CommonDataServices
 @inject ProjectService _projects
 
 <div class="container-fluid">
