--- a/src/ProjectManager/Components/ProjectSelector.razor
+++ b/src/ProjectManager/Components/ProjectSelector.razor
@@ -1,6 +1,6 @@
 ﻿@using CommonDataModels
 @using Blazorise.Components
-@using ProjectManager.Data.ProjectIntegration
+@using CommonDataServices
 @inject ProjectService _projectService
 
 <Autocomplete TItem="ProjectResponse"
