--- a/src/ProjectManager/Pages/Finance/ProjectInvoices.razor
+++ b/src/ProjectManager/Pages/Finance/ProjectInvoices.razor
@@ -2,9 +2,8 @@
 @using CommonDataModels
 @using ProjectManager.Components
 @using ProjectManager.Data
-@using ProjectManager.Data.ProjectIntegration
-@using System.Collections.ObjectModel
 @using System.Collections.Concurrent
+@using CommonDataServices
 @inject ProjectService _projects
 
 <h3>Unpaid Project Invoices</h3>
