--- a/src/ProjectManager/Pages/Index.razor
+++ b/src/ProjectManager/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 @using Blazorise
+@using CommonDataServices
 @using ProjectManager.Data
-@using ProjectManager.Data.ProjectIntegration
 @inject ProjectService _projects
 
 <PageTitle>Project Manager</PageTitle>
