--- a/src/ProjectManager/Pages/Workplan.razor
+++ b/src/ProjectManager/Pages/Workplan.razor
@@ -2,8 +2,9 @@
 @using Blazorise
 @using Blazorise.Components
 @using ProjectManager.Data
-@using ProjectManager.Data.ProjectIntegration
 @using System.Globalization
+@using CommonDataModels
+@using CommonDataServices
 @attribute [Authorize]
 @inject ProjectService _projects
 
